Revert "Revert "Create stops v2""
